# scanner

./: CMakeLists.txt  README.md  scanner.c
.github/workflows/: cmake-multi-platform.yml
test/: scanner_test.cpp
test/data/: ScanCharacter_in.txt  ScanCharacter_out.txt
